java 1.5, only some avoidance of new Integer
git-svn-id: https://scm.mmbase.org/mmbase/trunk@22556 91430c5f-d668-0410-9e7d-dd663366dcfd